Bug Fix: Text rendering was sometimes broken in Chrome.

--- a/src/css/core/object/objects/list.scss
+++ b/src/css/core/object/objects/list.scss
@@ -7,7 +7,6 @@
     height: 100%;
     margin: 0 !important;
     padding: 0 !important;
-    transform-style: preserve-3d;
   }
 
   &.is-initialized:not(.is-active) {
